<resources>
    <string name="app_name">test_asc</string>
    <string name="first_name">first name</string>
    <string name="last_name">Last name</string>
    <string name="cotact">Cotact</string>
    <string name="address">address</string>
    <string name="add_list">Add List</string>
    <string name="history">History</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="contact">contact</string>
</resources>